# IDE-Components

./: .gitignore  CMakeLists.txt  README.md
OSGi.frame/: CMakeLists.txt  CMakeLists.txt.user.f367567.4.9-pre1
OSGi.frame/example/: CMakeLists.txt  frame_exam.cpp  libdwarf++_exam.cpp  module_bob.cpp  module_jane.cpp
OSGi.frame/src/: CMakeLists.txt
OSGi.frame/src/archive/: Archive.cpp  CMakeLists.txt  CmdParse.hpp  CppParse.cpp  CppParse.hpp  CppTarget.hpp
OSGi.frame/src/frame/: Bundle.hpp  CMakeLists.txt  CmdParse.hpp  Container.hpp  LifeCycle.cpp  LifeCycle.hpp  Service.hpp  UrlConvert.h
build-CodeEditor-unknown-Debug/: CMakeCache.txt.prev
build-CodeEditor-unknown-Debug/.qtc_clangd/: compile_commands.json
build-CodeEditor-unknown-Debug/.qtc_clangd/.cache/clangd/index/: qflags.h.1148EB950D03344C.idx  qframe.h.1B2FFA0C2638629F.idx  qglobal.h.D9EE19FE722EEC35.idx  qmetatype.h.E81A9AE54227424A.idx  qobject.h.002DD3A63A7EF287.idx  qobjectdefs.h.5E4FBB2E35F7B13C.idx  qobjectdefs.h.7C72ABF0F2C57460.idx  qtextedit.h.D64C95558F443FA3.idx  qtypeinfo.h.DB1ED32EB2BB25BE.idx  qurl.h.AD7023CC8D8CB5CC.idx  qwidget.h.1757CFB8723E94F9.idx  qwindowdefs.h.0AADEC0FF82BC8FF.idx  textedit.cpp.6274A793DB02DC04.idx  textedit.hpp.478FB58AFA99D361.idx  textedit_p.cpp.AF7377760BEEE458.idx  textedit_p.hpp.26023AD09CBD684C.idx
build-example-unknown-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-example-unknown-Debug/.cmake/api/v1/reply/: cache-v2-54384f61aeb49a2d64ad.json  cmakeFiles-v1-b6885d7a71954ae2b8c9.json  codemodel-v2-283a4058fe4fabeb0cd3.json  index-2022-05-29T16-29-47-0901.json  target-codeeditor_exam-Debug-730c5cf67503fc4f5fc8.json
build-example-unknown-Debug/.qtc_clangd/: compile_commands.json
build-example-unknown-Debug/.qtc_clangd/.cache/clangd/index/: codeeditor.cpp.90C5FB04A46B0EFE.idx
build-frame-unknown-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-frame-unknown-Debug/.cmake/api/v1/reply/: cache-v2-544cc087d2c5631e09bc.json  cmakeFiles-v1-91c7a25985c447658cb0.json  codemodel-v2-1434c59087a843188a53.json  index-2022-06-11T09-32-32-0664.json  target-frame-Debug-a514f2981fffcb641a53.json
build-frame-unknown-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-0fcce89ff0dcbd91cce6.json  codemodel-v2-4dd8e778394c1b26df15.json  index-2022-06-11T07-15-01-0638.json  target-frame-Debug-5e1b1ad76163ebd9c668.json
build-frame-unknown-Debug/.qtc_clangd/: compile_commands.json
build-frame-unknown-Debug/.qtc_clangd/.cache/clangd/index/: QLibrary.31AE86CEFDB17E7D.idx  QLibraryInfo.424538C011237885.idx  alloc_traits.h.D035E1D004E2D54C.idx  alloc_traits.h.F3BC4A6F1C8B5CAD.idx  allocated_ptr.h.C90BE2362A2BAB3A.idx  allocator.h.224A20EDA80FC561.idx  any.E9F8C25CC0F2307B.idx  array.DFFC70A0252628F2.idx  atomic.BB18122FA560D387.idx  atomic_base.h.23E14E6951E7FAD7.idx  auto_ptr.h.3FB05657F9BEC4BB.idx  basic_string.h.70A519BB4D2D5592.idx  basic_string.tcc.920EBB1F27B60F76.idx  bit.E8D1C1BA98FCE64D.idx  c++allocator.h.109386295092738F.idx  c++config.h.58F9D1902ACF733A.idx  char_traits.h.9C21A44903BB6FE8.idx  charconv.h.AD9CBD604ACAD656.idx  chrono.7E6CE130B3E0ECE0.idx  cpp_type_traits.h.7E39373C4E8C639D.idx  cstddef.77195CBE0A735980.idx  cstdlib.2E3119B0B6B81799.idx  exception.h.C5D20D2CF7745860.idx  execution_defs.h.7336B8BE9B961CDC.idx  features.h.839A4F3F7C9A4375.idx  functional.B244FA85EB0E086D.idx  functional_hash.h.8972CC0D8DD2602C.idx  glue_algorithm_defs.h.9EF311D164D7AE58.idx  glue_memory_defs.h.8663341D793B08CE.idx  glue_numeric_defs.h.8A872234DAFE641D.idx  hashtable.h.45CBB37BC2DA71E3.idx  hashtable_policy.h.A110C41530FB2E2B.idx  invoke.h.7EC31B8D79E56ECB.idx  ios_base.h.D557A323503C762F.idx  iosfwd.800928927AC106DE.idx  libraryloader.cpp.2D318CBE9BF5113D.idx  libraryloader.hpp.F64BF7463F752CC4.idx  librarymodule.hpp.00B3DFD01967DF18.idx  limits.9611A37696164886.idx  list.tcc.F5302270D664A96E.idx  (+102 more)
cmake/: FindFrame.cmake
codeeditor/: CMakeLists.txt
codeeditor/example/: CMakeLists.txt
codeeditor/example/codeeditor/: CMakeLists.txt
codeeditor/src/: textedit.cpp  textedit.hpp
codeeditor/src/private/: textedit_p.cpp  textedit_p.hpp
example/: CMakeLists.txt
fileeditor/: CMakeLists.txt
fileeditor/src/: edit.cpp  edit.hpp  textdocument.cpp  textdocument.h  textedit.cpp  textedit.h
fileeditor/src/private/: edit_p.hpp  textedit_p.hpp
frame/: CMakeLists.txt
frame/example/: CMakeLists.txt  frame_exam.cpp  libdwarf++_exam.cpp  module_bob.cpp  module_jane.cpp
frame/include/: libraryloader.hpp  librarymodule.hpp
frame/src/: CMakeLists.txt  loader.cpp  loader.hpp  module.hpp
